# spotify_mcp

./: .gitignore  README.md  flake.nix  pyproject.toml
client/: .env.dist  client.py
server/: server.py  server_remote.py
