[project]
name = "spotify-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.1",
    "asyncpraw>=7.8.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.2",
    "praw>=7.8.1",
    "pybase64>=1.4.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
